--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-compatible" content="ie=edge">
     <title>Excursions</title>
-    <link rel="stylesheet" type="text/css" href="resources/style.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
 </head>
 <body>
     <h1 class="header--main">Discover hidden places in the world aroun you</h1>
-    <p><a class="link-cta" href="#">Download Excursion(coming soon!)</a></p>
+    <p><a class="link--cta" href="#">Download Excursion(coming soon!)</a></p>
     <video autoplay loop>
-        <source src="resource/video/excursion.mp4" type="video/mp4">
+        <source src="resources/videos/excursion.mp4" type="video/mp4">
     </video>
-    <h2 class="header-secondary">Your personal travel guide</h2>
-    <h4 class="header-sub-header">Excursion remembers places you like, and recommeds new points of interest around you.</h4>
+    <h2 class="header--secondary">Your personal travel guide</h2>
+    <h4 class="header--sub-header">Excursion remembers places you like, and recommeds new points of interest around you.</h4>
     <p><img src="resources/images/camp.png"></p>
     <p><img src="resources/images/phone.png"></p>
-    <h4 class="header-sub-header">Coming soon for iphone and Android.</h4>
-    <p><a class="link-cta" href="#">Download Excursion(coming soon!)</a></p>
-
+    <h4 class="header--sub-header">Coming soon for iphone and Android.</h4>
+    <p><a class="link--cta" href="#">Download Excursion(coming soon!)</a></p>
+    <p class="footer--copyright">© Excursion</p>
 
 </body>
 </html>
